test_programs/compile_failure/noirc_frontend_tests_traits_ambiguous_associated_type/src/main.nr

    trait MyTrait {
        type X;
    }

    fn main() {
        let _: MyTrait::X = 1;
    }
    